--- a/pipeline/config.ini
+++ b/pipeline/config.ini
@@ -7,6 +7,8 @@ MEGARES = /blue/boucher/marco.oliva/data/MEGARes/V2/megares_full_database_v2.00.
 MEGARES_ONTOLOGY = /blue/boucher/marco.oliva/data/MEGARes/V2/megares_modified_annotations_v2.00.csv
 
 [EXTENSION]
+DUPLICATES = _duplicates.csv
+DEDUPLICATED = _deduplicated.fasta
 A_TO_MEGARES = _ato_megaresv2.sam
 A_TO_ACLAME = _ato_ACLAME.sam
 A_TO_ICEBERG = _ato_ICEBERG.sam
@@ -21,6 +23,7 @@ V2_SKIP_END = 66
 GLOBAL_AMR_THRESHOLD = 0.8
 GLOBAL_MGE_THRESHOLD = 0.5
 GLOBAL_KEGG_THRESHOLD = 0.5
+DEDUP_CLUSTERS = 200
 
 [TOOLS]
 PROFILER = /usr/bin/time --verbose
@@ -40,9 +43,10 @@ FIND_COLOCALIZATIONS = /blue/boucher/marco.oliva/projects/remote/argmobrich_anal
 COLOCALIZATIONS_RICHNESS = /blue/boucher/marco.oliva/projects/remote/argmobrich_analysis/colocalizations/colocalization_richness.py
 
 [STATS]
-READ_LENGTHS = NOT_YET_IMPLEMENTED
+GET_STATS = True
 
 [PIPELINE_STEPS]
+DEDUPLICATE = False
 ALIGN_TO_MEGARES = True
 ALIGN_TO_MGES = True
 ALIGN_TO_KEGG = True
