--- a/pipeline/config.ini
+++ b/pipeline/config.ini
@@ -35,12 +35,13 @@ ALIGNER_ONT_OPTION =
 ALIGNER_HIFI_OPTION =
 
 [SCRIPTS]
-FIND_DUPLICATES = /blue/boucher/marco.oliva/projects/remote/argmobrich_analysis/deduplication/find_duplicates.py
-DEDUPLICATE = /blue/boucher/marco.oliva/projects/remote/argmobrich_analysis/deduplication/deduplicate.py
-GEN_MOBILOME = /blue/boucher/marco.oliva/projects/remote/argmobrich_analysis/mobilome/gen_mobilome.py
-GEN_RESISTOME = /blue/boucher/marco.oliva/projects/remote/argmobrich_analysis/resistome/gen_resistome.py
-FIND_COLOCALIZATIONS = /blue/boucher/marco.oliva/projects/remote/argmobrich_analysis/colocalizations/find_colocalizations.py
-COLOCALIZATIONS_RICHNESS = /blue/boucher/marco.oliva/projects/remote/argmobrich_analysis/colocalizations/colocalization_richness.py
+BASE_PATH =
+FIND_DUPLICATES = deduplication/find_duplicates.py
+DEDUPLICATE = deduplication/deduplicate.py
+GEN_MOBILOME = mobilome/gen_mobilome.py
+GEN_RESISTOME = resistome/gen_resistome.py
+FIND_COLOCALIZATIONS = colocalizations/find_colocalizations.py
+COLOCALIZATIONS_RICHNESS = colocalizations/colocalization_richness.py
 
 [STATS]
 GET_STATS = True
