--- a/config.ini
+++ b/config.ini
@@ -36,12 +36,12 @@ ALIGNER_HIFI_OPTION =
 
 [SCRIPTS]
 BASE_PATH =
-FIND_DUPLICATES = deduplication/find_duplicates.py
-DEDUPLICATE = deduplication/deduplicate.py
-GEN_MOBILOME = mobilome/gen_mobilome.py
-GEN_RESISTOME = resistome/gen_resistome.py
-FIND_COLOCALIZATIONS = colocalizations/find_colocalizations.py
-COLOCALIZATIONS_RICHNESS = colocalizations/colocalization_richness.py
+FIND_DUPLICATES = src/find_duplicates.py
+DEDUPLICATE = src/deduplicate.py
+GEN_MOBILOME = src/gen_mobilome.py
+GEN_RESISTOME = src/gen_resistome.py
+FIND_COLOCALIZATIONS = src/find_colocalizations.py
+COLOCALIZATIONS_RICHNESS = src/colocalization_richness.py
 
 [STATS]
 GET_STATS = True
