--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ MEGARES_ONTOLOGY = /blue/boucher/marco.oliva/data/MEGARes/V2/megares_modified_an
 
 [EXTENSION]
 DUPLICATES = _duplicates.csv
-DEDUPLICATED = _deduplicated.fasta
+DEDUPLICATED = _deduplicated.fastq
 A_TO_MEGARES = _ato_megaresv2.sam
 A_TO_ACLAME = _ato_ACLAME.sam
 A_TO_ICEBERG = _ato_ICEBERG.sam
