--- a/config.ini
+++ b/config.ini
@@ -16,6 +16,7 @@ A_TO_PLASMIDS = _ato_PLASMIDS.sam
 A_TO_KEGG = _ato_KEGG.sam
 COLOCALIZATIONS = _colocalizations.csv
 COLOCALIZATIONS_RICHNESS = _colocalizations_richness.csv
+GENES_LIST = _genes_list.csv
 
 [MISC]
 V2_SKIP_BEGIN = 3
