--- a/config.ini
+++ b/config.ini
@@ -25,6 +25,10 @@ GLOBAL_AMR_THRESHOLD = 0.8
 GLOBAL_MGE_THRESHOLD = 0.5
 GLOBAL_KEGG_THRESHOLD = 0.5
 DEDUP_CLUSTERS = 200
+# SHORT or LONG
+RESISTOME_STRATEGY = LONG
+MOBILOME_STRATEGY = LONG
+
 
 [TOOLS]
 PROFILER = /usr/bin/time --verbose
