MGE DBs combined

--- a/config.ini
+++ b/config.ini
@@ -1,39 +1,35 @@
 [DATABASE]
 KEGG = /blue/boucher/marco.oliva/data/MGE_DBs/KEGG/kegg_prokaryotes.fasta
-ACLAME = /blue/boucher/marco.oliva/data/MGE_DBs/ACLAME/aclame_genes_all_0.4.fasta
-ICEBERG = /blue/boucher/marco.oliva/data/MGE_DBs/ICEBERG/ICEberg_seq.fasta
-PLASMIDS = /blue/boucher/marco.oliva/data/MGE_DBs/PLASMIDS/plasmids_combined.fsa
 MEGARES = /blue/boucher/marco.oliva/data/MEGARes/V2/megares_full_database_v2.00.fasta
 MEGARES_ONTOLOGY = /blue/boucher/marco.oliva/data/MEGARes/V2/megares_modified_annotations_v2.00.csv
+MGES = /blue/boucher/marco.oliva/data/MGE_DBs/mges_combined.fasta
+
 
 [EXTENSION]
 DUPLICATES = _duplicates.csv
 DEDUPLICATED = _deduplicated.fastq
 A_TO_MEGARES = _ato_megaresv2.sam
-A_TO_ACLAME = _ato_ACLAME.sam
-A_TO_ICEBERG = _ato_ICEBERG.sam
-A_TO_PLASMIDS = _ato_PLASMIDS.sam
 A_TO_KEGG = _ato_KEGG.sam
+A_TO_MGES = _ato_MGES.sam
 COLOCALIZATIONS = _colocalizations.csv
 COLOCALIZATIONS_RICHNESS = _colocalizations_richness.csv
 GENES_LIST = _genes_list.csv
 
 [MISC]
-V2_SKIP_BEGIN = 3
-V2_SKIP_END = 66
 GLOBAL_AMR_THRESHOLD = 0.8
 GLOBAL_MGE_THRESHOLD = 0.5
 GLOBAL_KEGG_THRESHOLD = 0.5
 DEDUP_CLUSTERS = 200
 # SHORT or LONG
-RESISTOME_STRATEGY = LONG
-MOBILOME_STRATEGY = LONG
-
+RESISTOME_STRATEGY = SHORT
+MOBILOME_STRATEGY = SHORT
+USE_SECONDARY_ALIGNMENTS = True
+PLOTS = True
 
 [TOOLS]
 PROFILER = /usr/bin/time --verbose
 ALIGNER = minimap2
-ALIGNER_FLAGS =
+ALIGNER_FLAGS = -p 0.5
 # Leave blank if it doesn't apply
 ALINGER_PB_OPTION = -ax map-pb
 ALIGNER_ONT_OPTION =
@@ -52,7 +48,7 @@ COLOCALIZATIONS_RICHNESS = src/colocalization_richness.py
 GET_STATS = True
 
 [PIPELINE_STEPS]
-DEDUPLICATE = False
+DEDUPLICATE = True
 ALIGN_TO_MEGARES = True
 ALIGN_TO_MGES = True
 ALIGN_TO_KEGG = True
