--- a/config.ini
+++ b/config.ini
@@ -8,29 +8,32 @@ MGES = /blue/boucher/marco.oliva/data/MGE_DBs/mges_combined.fasta
 DUPLICATES = _duplicates.csv
 DEDUPLICATED = _deduplicated.fastq
 A_TO_MEGARES = _ato_megaresv2.sam
-A_TO_KEGG = _ato_KEGG.sam
 A_TO_MGES = _ato_MGES.sam
+A_TO_KEGG = _ato_KEGG.sam
 COLOCALIZATIONS = _colocalizations.csv
 COLOCALIZATIONS_RICHNESS = _colocalizations_richness.csv
 GENES_LIST = _genes_list.csv
 
 [MISC]
+V2_SKIP_BEGIN = 3
+V2_SKIP_END = 66
 GLOBAL_AMR_THRESHOLD = 0.8
 GLOBAL_MGE_THRESHOLD = 0.5
 GLOBAL_KEGG_THRESHOLD = 0.5
+GLOBAL_AMR_THRESHOLD_COLOCALIZATIONS = 0.8
+GLOBAL_MGE_THRESHOLD_COLOCALIZATIONS = 0.5
+GLOBAL_KEGG_THRESHOLD_COLOCALIZATIONS = 0.5
 DEDUP_CLUSTERS = 200
-# SHORT or LONG
 RESISTOME_STRATEGY = SHORT
 MOBILOME_STRATEGY = SHORT
 USE_SECONDARY_ALIGNMENTS = True
-PLOTS = True
 
 [TOOLS]
 PROFILER = /usr/bin/time --verbose
 ALIGNER = minimap2
-ALIGNER_FLAGS = -p 0.5
+ALIGNER_FLAGS =
 # Leave blank if it doesn't apply
-ALINGER_PB_OPTION = -ax map-pb
+ALIGNER_PB_OPTION = -ax map-pb
 ALIGNER_ONT_OPTION =
 ALIGNER_HIFI_OPTION =
 
@@ -47,10 +50,11 @@ COLOCALIZATIONS_RICHNESS = src/colocalization_richness.py
 GET_STATS = True
 
 [PIPELINE_STEPS]
-DEDUPLICATE = True
+DEDUPLICATE = False
 ALIGN_TO_MEGARES = True
 ALIGN_TO_MGES = True
 ALIGN_TO_KEGG = True
 COMPUTE_MOBILOME = True
 COMPUTE_RESISTOME = True
 COMPUTE_COLOCALIZATIONS = True
+
