Working on statistics

--- a/config.ini
+++ b/config.ini
@@ -45,16 +45,17 @@ GEN_MOBILOME = src/gen_mobilome.py
 GEN_RESISTOME = src/gen_resistome.py
 FIND_COLOCALIZATIONS = src/find_colocalizations.py
 COLOCALIZATIONS_RICHNESS = src/colocalization_richness.py
+READS_STATS = src/read_stats.py
 
 [STATS]
 GET_STATS = True
 
 [PIPELINE_STEPS]
 DEDUPLICATE = False
-ALIGN_TO_MEGARES = True
-ALIGN_TO_MGES = True
-ALIGN_TO_KEGG = True
-COMPUTE_MOBILOME = True
+ALIGN_TO_MEGARES = False
+ALIGN_TO_MGES = False
+ALIGN_TO_KEGG = False
+COMPUTE_MOBILOME = False
 COMPUTE_RESISTOME = True
-COMPUTE_COLOCALIZATIONS = True
+COMPUTE_COLOCALIZATIONS = False
 
