Separete mobilome and resistome back in

--- a/config_test.ini
+++ b/config_test.ini
@@ -1,8 +1,8 @@
 [DATABASE]
-KEGG = /blue/boucher/marco.oliva/data/MGE_DBs/KEGG/kegg_prokaryotes.fasta
-MEGARES = /blue/boucher/marco.oliva/data/MEGARes/V2/megares_full_database_v2.00.fasta
-MEGARES_ONTOLOGY = /blue/boucher/marco.oliva/data/MEGARes/V2/megares_modified_annotations_v2.00.csv
-MGES = /blue/boucher/marco.oliva/data/MGE_DBs/mges_combined.fasta
+KEGG = /home/marco/Data/MGE_DBs/KEGG/kegg_prokaryotes.fasta
+MGES = /home/marco/Data/MGE_DBs/mges_combined.fasta
+MEGARES = /home/marco/Data/MEGARes/V2/megares_full_database_v2.00.fasta
+MEGARES_ONTOLOGY = /home/marco/Data/MEGARes/V2/megares_modified_annotations_v2.00.csv
 
 [EXTENSION]
 DUPLICATES = _duplicates.csv
@@ -13,6 +13,7 @@ A_TO_KEGG = _ato_KEGG.sam
 COLOCALIZATIONS = _colocalizations.csv
 COLOCALIZATIONS_RICHNESS = _colocalizations_richness.csv
 GENES_LIST = _genes_list.csv
+READS_LENGTH = _reads_length.json
 
 [MISC]
 V2_SKIP_BEGIN = 3
@@ -20,7 +21,7 @@ V2_SKIP_END = 66
 GLOBAL_AMR_THRESHOLD = 0.8
 GLOBAL_MGE_THRESHOLD = 0.5
 GLOBAL_KEGG_THRESHOLD = 0.5
-GLOBAL_AMR_THRESHOLD_COLOCALIZATIONS = 0.8
+GLOBAL_AMR_THRESHOLD_COLOCALIZATIONS = 0.3
 GLOBAL_MGE_THRESHOLD_COLOCALIZATIONS = 0.5
 GLOBAL_KEGG_THRESHOLD_COLOCALIZATIONS = 0.5
 DEDUP_CLUSTERS = 200
@@ -43,7 +44,6 @@ FIND_DUPLICATES = src/find_duplicates.py
 DEDUPLICATE = src/deduplicate.py
 GEN_MOBILOME = src/gen_mobilome.py
 GEN_RESISTOME = src/gen_resistome.py
-GEN_RESISTOME_AND_MOBILOME = src/gen_resistome_and_mobilome.py
 FIND_COLOCALIZATIONS = src/find_colocalizations.py
 COLOCALIZATIONS_RICHNESS = src/colocalization_richness.py
 READS_STATS = src/read_stats.py
@@ -58,6 +58,4 @@ ALIGN_TO_MGES = False
 ALIGN_TO_KEGG = False
 COMPUTE_MOBILOME = False
 COMPUTE_RESISTOME = False
-COMPUTE_RESISTOME_AND_MOBILOME = True
 COMPUTE_COLOCALIZATIONS = False
-
