--- a/config_test.ini
+++ b/config_test.ini
@@ -1,8 +1,8 @@
 [DATABASE]
-KEGG = /home/marco/Data/MGE_DBs/KEGG/kegg_prokaryotes.fasta
-MGES = /home/marco/Data/MGE_DBs/mges_combined.fasta
-MEGARES = /home/marco/Data/MEGARes/V2/megares_full_database_v2.00.fasta
-MEGARES_ONTOLOGY = /home/marco/Data/MEGARes/V2/megares_modified_annotations_v2.00.csv
+KEGG = /home/marco/Data-Ext/MGE_DBs/KEGG/kegg_prokaryotes.fasta
+MGES = /home/marco/Data-Ext/MGE_DBs/mges_combined.fasta
+MEGARES = /home/marco/Data-Ext/MEGARes/V2/megares_full_database_v2.00.fasta
+MEGARES_ONTOLOGY = /home/marco/Data-Ext/MEGARes/V2/megares_modified_annotations_v2.00.csv
 
 [EXTENSION]
 DUPLICATES = _duplicates.csv
@@ -44,6 +44,7 @@ FIND_DUPLICATES = src/find_duplicates.py
 DEDUPLICATE = src/deduplicate.py
 GEN_MOBILOME = src/gen_mobilome.py
 GEN_RESISTOME = src/gen_resistome.py
+GEN_RESISTOME_AND_MOBILOME = src/gen_resistome_and_mobilome.py
 FIND_COLOCALIZATIONS = src/find_colocalizations.py
 COLOCALIZATIONS_RICHNESS = src/colocalization_richness.py
 READS_STATS = src/read_stats.py
@@ -53,9 +54,10 @@ GET_STATS = True
 
 [PIPELINE_STEPS]
 DEDUPLICATE = False
-ALIGN_TO_MEGARES = False
-ALIGN_TO_MGES = False
-ALIGN_TO_KEGG = False
+ALIGN_TO_MEGARES = True
+ALIGN_TO_MGES = True
+ALIGN_TO_KEGG = True
 COMPUTE_MOBILOME = False
 COMPUTE_RESISTOME = False
-COMPUTE_COLOCALIZATIONS = False
+COMPUTE_RESISTOME_AND_MOBILOME = True
+COMPUTE_COLOCALIZATIONS = True
