--- a/config.ini
+++ b/config.ini
@@ -13,6 +13,7 @@ A_TO_KEGG = _ato_KEGG.sam
 COLOCALIZATIONS = _colocalizations.csv
 COLOCALIZATIONS_RICHNESS = _colocalizations_richness.csv
 GENES_LIST = _genes_list.csv
+READS_LENGTH = _reads_length.json
 
 [MISC]
 V2_SKIP_BEGIN = 3
