--- a/Tests/config_test_1.ini
+++ b/Tests/config_test_1.ini
@@ -56,7 +56,7 @@ GET_STATS = True
 DEDUPLICATE = False
 ALIGN_TO_MEGARES = True
 ALIGN_TO_MGES = True
-ALIGN_TO_KEGG = False
+ALIGN_TO_KEGG = True
 COMPUTE_MOBILOME = False
 COMPUTE_RESISTOME = False
 COMPUTE_RESISTOME_AND_MOBILOME = True
