Still working on Snakefile

--- a/config.yaml
+++ b/config.yaml
@@ -23,6 +23,7 @@ MISC:
   GLOBAL_MGE_THRESHOLD_COLOCALIZATIONS : 0.5
   GLOBAL_KEGG_THRESHOLD_COLOCALIZATIONS : 0.5
   DEDUP_CLUSTERS : 200
+  DEDUP_THREADS : 12
   RESISTOME_STRATEGY : SHORT
   MOBILOME_STRATEGY : SHORT
   USE_SECONDARY_ALIGNMENTS : True
