Working on plots
The pipeline works on `mamba` but not on cluster. The jobs spawn but they die right away. Need to clean the env files and update the readme

--- a/envs/deduplication.yaml
+++ b/envs/deduplication.yaml
@@ -1,8 +1,11 @@
 name: deduplication
 channels:
+  - conda-forge
   - bioconda
+  - anaconda
 dependencies:
-  - python=3.8
+  - biopython
+  - python=3.7
   - blat
   - scipy
   - scikit-learn
