--- a/envs/pipeline.yaml
+++ b/envs/pipeline.yaml
@@ -1,7 +1,11 @@
 name: pipeline
-
+channels:
+  - conda-forge
+  - bioconda
+  - defaults
 dependencies:
   - python=3.8
+  - samtools=1.9
   - biopython
   - pysam
   - scipy
