--- a/config.json
+++ b/config.json
@@ -65,7 +65,7 @@
     "GEN_RESISTOME_AND_MOBILOME" : "src/gen_resistome_and_mobilome.py",
     "FIND_COLOCALIZATIONS" : "src/find_colocalizations.py",
     "COLOCALIZATIONS_RICHNESS" : "src/colocalization_richness.py",
-    "READS_LENGTHS" : "src/read_lengths.py"
+    "READS_LENGTH" : "src/read_lengths.py"
   },
 
   "STATS" :
