Add option to not deduplicate

--- a/config.json
+++ b/config.json
@@ -36,6 +36,7 @@
     "GLOBAL_AMR_THRESHOLD_COLOCALIZATIONS" : 0.8,
     "GLOBAL_MGE_THRESHOLD_COLOCALIZATIONS" : 0.5,
     "GLOBAL_KEGG_THRESHOLD_COLOCALIZATIONS" : 0.5,
+    "DEDUPLICATE" : "True",
     "DEDUP_CLUSTERS" : 200,
     "BLAT_THREADS" : 4,
     "DEDUPLICATION_SIMILARITY_THRESHOLD" : 0.9,
